# real_estate_data

./: Untitled2.ipynb  data_sheet.xlsx  pyproject.toml
real_estate_data/: real_estate_data.py
real_estate_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_real_estate_data.py
